[package]
name = "amm-proxy"
version = "0.1.0"
description = "Created with Anchor"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "amm_proxy"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.23.0"
amm-anchor = {path = "../../../../"}
spl-token = { version = "3.1.1", features = ["no-entrypoint"] }